@@ -1,5 +1,10 @@
 2005-04-11  Laurent Sansonetti  <lrz@gnome.org>
-	
+
+	* lib/alexandria/ui/book_properties_dialog_base.rb,
+	  lib/alexandria/ui/completion_models.rb:
+
+	Auto-complete borrowers.
+
 	* TODO:
 
 	Updated.
